--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,14 @@ jobs:
             paths: 
               - node_modules
             key: v1-dependencies-{{ checksum "package.json" }}
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - add_ssh_keys:
+        fingerprints:
+          - 63:67:5f:9f:23:cb:b8:b7:0a:f4:3b:62:4f:df:28:26
+      - run
+        name: Deploy Over SSH
+        command: |
+          ssh $SSH_USER@SSH_HOST "cd ~/apps/hello-world-ci && git pull origin master"
