--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello-world",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "unit": "mocha --timeout 5s test",
     "coverage": "nyc npm run unit",
